objects/ASI_CRM_CN_Channel__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_BC_Rate__c</fullName>
        <label>BC Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Chi_Name__c</fullName>
        <label>Channel Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Code__c</fullName>
        <label>Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Eng_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Group</label>
        <referenceTo>ASI_CRM_CN_Channel_Group__c</referenceTo>
        <relationshipLabel>Channel</relationshipLabel>
        <relationshipName>ASI_CRM_CN_ChannelToCG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_On_Off__c</fullName>
        <label>On/Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet_Class__c</fullName>
        <label>Outlet Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Code_for_PAF__c</fullName>
        <label>Code for PAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Group_Customers__c</fullName>
        <label>Group Customers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DP Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Corporate Accounts</fullName>
                </value>
                <value>
                    <fullName>Employee&apos;s Accounts</fullName>
                </value>
                <value>
                    <fullName>Inter-company</fullName>
                </value>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>DF Island</fullName>
                </value>
                <value>
                    <fullName>Direct Shipments</fullName>
                </value>
                <value>
                    <fullName>Bond to Bond Sales</fullName>
                </value>
                <value>
                    <fullName>Concessionaires</fullName>
                </value>
                <value>
                    <fullName>Downtown / Shipchandlers</fullName>
                </value>
                <value>
                    <fullName>Domestic Airports</fullName>
                </value>
                <value>
                    <fullName>Embassy</fullName>
                </value>
                <value>
                    <fullName>Inter Company</fullName>
                </value>
                <value>
                    <fullName>Border Shops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market_Responsibility__c</fullName>
        <label>Market Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duty Paid</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Channel_Code__c</fullName>
        <label>New Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Achievement_for_Conditional__c</fullName>
        <label>Achievement % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Achievement_for_Variable__c</fullName>
        <label>Achievement % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Incentives_for_Conditional__c</fullName>
        <label>Incentives % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Incentives_for_Variable__c</fullName>
        <label>Incentives % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Outlet_Contract_Rebate__c</fullName>
        <label>Outlet Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T1_Contract_Rebate__c</fullName>
        <label>T1 Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T2_Contract_Rebate__c</fullName>
        <label>T2 Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>ASI_CRM_CN_Channel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>ASI_CRM_CN_Outlet_Class__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_CN_Channel</value>
        </filters>
        <label>CN Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Channel</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_MY_Channel</value>
        </filters>
        <label>MY Channels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Segmentation_Channel</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_MY_Segmentation_Channel</value>
        </filters>
        <label>MY Segmentation Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Channel</fullName>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Code_for_PAF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_TW_Achievement_for_Conditional__c</columns>
        <columns>ASI_CRM_TW_Incentives_for_Conditional__c</columns>
        <columns>ASI_CRM_TW_Achievement_for_Variable__c</columns>
        <columns>ASI_CRM_TW_Incentives_for_Variable__c</columns>
        <columns>ASI_CRM_TW_T1_Contract_Rebate__c</columns>
        <columns>ASI_CRM_TW_T2_Contract_Rebate__c</columns>
        <columns>ASI_CRM_TW_Outlet_Contract_Rebate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_TW_Channel</value>
        </filters>
        <label>TW Channels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_New_Channel1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Eng_Name__c</columns>
        <columns>ASI_CRM_BC_Rate__c</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_Channel_Group__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>ASI_CRM_For_Contract__c</columns>
        <columns>ASI_CRM_For_Outlet__c</columns>
        <columns>ASI_CRM_CN_Outlet_Class__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_New_Channel_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_CN_New_Channel</value>
        </filters>
        <label>CN New Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Channel</fullName>
        <active>true</active>
        <label>CN Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_New_Channel</fullName>
        <active>true</active>
        <label>CN New Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Channel</fullName>
        <active>true</active>
        <label>MY Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Segmentation_Channel</fullName>
        <active>true</active>
        <label>MY Segmentation Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Channel</fullName>
        <active>true</active>
        <label>TW Channel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>